--- a/inlineblock.html
+++ b/inlineblock.html
@@ -41,45 +41,15 @@
 
         </ul>
     </div>
-    <div class="wrapper5">
-        <div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-        <div>
-            <div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-            <div>
-                <div></div>
-                <div></div>
-            </div>
-        </div>
-        <div>
-            <div>
-                <div></div>
-            </div>
-            <div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-        </div>
-        <div>
-            <div>
-                <div></div>
-                <div>
-                    <div>
-                        <div></div>
-                        <div></div>
-                    </div>
-                    <div></div>
-                </div>
-            </div>
-            <div></div>
+    <div>
+        <div class="content">
+            <div class="block block-1"><img class="i-w" src="images/2101.jpg" alt="vaz2101"></div>
+            <div class="block block-2"><img class="i-w" src="images/2102.jpg" alt="vaz2102"></div>
+            <div class="block block-3"><img class="i-w" src="images/2103.jpg" alt="vaz2103"></div>
+            <div class="block block-4"><img class="i-w" src="images/2104.jpg" alt="vaz2104"></div>
+            <div class="block block-5"><img class="i-w" src="images/2105.jpg" alt="vaz2105"></div>
+            <div class="block block-6"><img class="i-w" src="images/2106.jpg" alt="vaz2106"></div>
+            <div class="block block-7"><img class="i-w" src="images/2107.jpg" alt="vaz2107"></div>
         </div>
     </div>
 </body>
